@@ -1,10 +1,12 @@
 # Initialize some common variables so that we can always use +=.
 AM_CFLAGS =
 AM_CPPFLAGS =
-AM_CXXFLAGS =
+AM_CXXFLAGS = $(MSVC_CXXFLAGS)
 AUTOMAKE_OPTIONS =
 BUILT_SOURCES =
-CLEANFILES =
+# Visual Studio Debugger PDB Files (C++).
+# http://msdn2.microsoft.com/en-us/library/yd4f8bd1.aspx.
+CLEANFILES = vc80.pdb
 EXTRA_DIST =
 EXTRA_HEADERS =
 MAINTAINERCLEANFILES =
